# oxe_torch_dataloader

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: initialize.yaml
Uha/: __init__.py  load_data.py  pytorch_oxe_dataloader.py  test_loader.py
Uha/data/oxe/: __init__.py  oxe_dataset_mixes.py
Uha/data/utils/: task_augmentation.py
scripts/: README.md  download_data.py  print_stats.py  quick_check.ipynb  quick_check_dataloader.ipynb  quick_check_tfds.ipynb  test_loader.py  test_loader_old.py
uha/: __init__.py  pytorch_oxe_dataloader.py  uha_datamodule.py
uha/data/: dataset.py  obs_transforms.py  traj_transforms.py
uha/data/conf/: uha_default_download_config.yaml  uha_default_load_config.yaml
uha/data/conf/language_encoders/: clip.yaml  florence_large.yaml  no_encoder.yaml
uha/data/conf/transforms/: oxe_no_remapping.yaml  oxe_to_calvin.yaml  oxe_to_libero.yaml  oxe_to_testpolicy.yaml
uha/data/language_encoders/: base.py  clip_tokens.py  florence_tokens.py  no_encoder.py
uha/data/oxe/: __init__.py  oxe_dataset_configs.py  oxe_dataset_mixes.py  oxe_standardization_transforms.py  transform_generator.py
uha/data/oxe/configs/: __init__.py  dataset_configs.py
uha/data/oxe/transforms/: __init__.py  base.py  droid_utils.py  factory.py  robot_transforms.py  transforms_registry.py
uha/data/utils/: data_utils.py  dataset_diagnostics.py  dataset_index.py  frequency_mapping.py  goal_relabeling.py  rlds_utils.py  spec.py  task_augmentation.py  text_processing.py
{{cookiecutter.repo_name}}/: README.md  pyproject.toml
