[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "uha"
authors = [
    {name = "Siddharth Karamcheti", email="skaramcheti@cs.stanford.edu"},
    {name = "Marcel Rühle", email="unesl@student.kit.edu"}
]
description = "Uha: Minimal adaption of the dataloader proposed in Octo for loading over 25 embodiments."
version = "0.2.5"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["machine learning"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy==1.24.3",
    "torch",
    "tensorflow==2.15.0",
    "tensorflow-datasets==4.9.2",
    "tensorflow_graphics==2021.12.3",
    "tfds-nightly==4.9.4.dev202401150044",
    "gcsfs",
    "tqdm>=4.60.0",
    "absl-py >= 0.12.0",
    "hydra-core==1.1.1",
    "dlimp @ git+https://github.com/mbreuss/dlimp_no_tf_dataset_dependency",
]

[project.optional-dependencies]
dev = [
    "black",
    "ipython",
    "pre-commit",
    "ruff",
]

[project.urls]
homepage = "https://github.com/mbreuss/openrt_torch_dataloader"
repository = "https://github.com/mbreuss/openrt_torch_dataloader"
documentation = "https://github.com/mbreuss/openrt_torch_dataloader"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["cache"]

[tool.black]
line-length = 121
target-version = ["py310"]
preview = true

[tool.ruff]
line-length = 121
target-version = "py38"
select = ["A", "B", "C90", "E", "F", "I", "RUF", "W"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]
